Implementações: - Melhoria no layout da tela de detalhes do usuário; - Inclusão da linha de paginação, mas está sem funcionar; - Criação de classe de animação 'fade-in' global.

--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -1,7 +1,14 @@
 {
+	"name": "Nome",
+	"email":"E-mail",
+
 	"getReposUserListError": "O usuário não possui repositórios cadastrados!",
 	"getUsersError": "O usuário não foi encontrado!",
 	"getStarredUserListError": "Não foi possível recuperar os repositórios estrelados pelo usuário!",
 	"timeoutErrorMessage":"Tempo de responsta ultrapassado!",
-	"networErrorMessage":"Você está sem internet no momento!"
+	"networErrorMessage":"Você está sem internet no momento!",
+	"userComponentTitle": "Busca de usuários do GitHub",
+	"projectTitle": "Teste Compasso - Boanerges Souza",
+	"userLogin": "Login do usuario ",
+	"searchUser": "Buscar usuário"
 }
