--- a/src/assets/i18n/pt-br.json
+++ b/src/assets/i18n/pt-br.json
@@ -1,6 +1,7 @@
 {
 	"name": "Nome",
 	"email":"E-mail",
+	"filter": "Filtrar",
 
 	"getReposUserListError": "O usuário não possui repositórios cadastrados!",
 	"getUsersError": "O usuário não foi encontrado!",
